build: lower Java baseline to 17
Signed-off-by: Taewoong Kim <ktw2172@gmail.com>